# rm-trash

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/rm_trash/: commands.py  trash.py
src/trash/: LICENSE.md  trash.py
