[tool.poetry]
name = "rm-trash"
version = "0.0.5"
description = "🗑 Safe(r) deletion of files from the macOS command line"
authors = ["celsius narhwal <hello@celsiusnarhwal.dev>"]
readme = "README.md"
homepage = "https://github.com/celsiusnarhwal/rm-trash"

[tool.poetry.dependencies]
python = "^3.8"
typer = { extras = ["all"], version = "^0.7.0" }
inflect = "^6.0.2"

[tool.poetry.scripts]
trash = "rm_trash.trash:app"

[tool.poetry.group.dev.dependencies]
laureate = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
